Fixed the right spacing on nav bar buttons

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -101,7 +101,6 @@ nav{
 .dropdown-content a  {
 	color: #ffffff;
 	padding: 12px 16px;
-	margin-right: 30px;
     text-decoration: none;
     display: block;
 }
@@ -111,6 +110,11 @@ nav{
 	padding-left: 16px;
 	padding-bottom: 14px;
 }	
+
+.nav-second-col{
+	margin-left: 30px;
+}
+
 /*TODO: Check to make sure the font and underline changes once the button is active*/
 
 
